Implementa el guardar un libro con sus autores